app/scss/artworks.scss
/* ... */
  .chain-grid {
    position: absolute;
    top: 30px;
    left: 50%;
    width: 50vw;
    height: auto;
    //height: 500px;
    max-width: 700px;
    max-height: 611px;
    will-change: transform;
    opacity: 0.5;
    //background: rgba($secondry-color, 0.3); //url('/assets/images/Grid.png');
    //border-radius: 50%;
    //box-shadow: inset 50px 50px 10vh #d4e4f74f,20px 20px 10vh #dbdef045;

    -webkit-transition: transform 1.5s ease-out;
       -moz-transition: transform 1.5s ease-out;
            transition: transform 1.5s ease-out;

    transform: translateZ(5px);

    // -webkit-animation: moveChainGrid 8s ease-in-out infinite;
    //   -moz-animation: moveChainGrid 8s ease-in-out infinite;
    //   animation: moveChainGrid 8s ease-in-out infinite;
    
    //transform: translateY(30px);
    //@include showTime(3s);

    img {
      max-width: 700px;
      max-height: 591px;
      height: auto;
    }

    @include breakpoint(medium) {
      width: 30vw;
    }
  }

  @keyframes moveChainGrid {
    0% { transform: translateY(30px); }
    50% { transform: translateY(0px); }
    100% { transform: translateY(30px); }
  }

.parallax {
    position: absolute;
    width: 100%;
    height: 100%;
    height: 100dvh;
    max-width: 100vw;
    top: 0; bottom: 0;
    left: 0; right: 0;
    padding: 0; margin: 0 auto;
    overflow-x: hidden; 
    overflow-y: auto;
    perspective: 1px;
    //max-width: $max-width + 100;
    perspective-origin: center;
    text-align: center;
    opacity: 1;

    -webkit-transition: opacity 1.5s ease-out;
       -moz-transition: opacity 1.5s ease-out;
            transition: opacity 1.5s ease-out;
}
.parallax.masked {
    opacity: 0.001;
}

.parallax-layer {
    position: absolute;  
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    pointer-events: none;
}

.parallax-group {
    position: absolute;
    width: 100%;
    height: 100%;
    overflow: visible;
    top: 0; bottom: 0;
    left: 0; right: 0;
    padding: 0; margin: 0 auto;
    transform-style: preserve-3d;
    max-width: $max-width;
    pointer-events: none;
}
$layer-show-time: 1s;
.parallax-layer-base {
    transform: translateZ(0);
}

.parallax-layer-back {
    transform: translateZ(-1px) scale(2);
}

.parallax-layer-white {
    top: -450px;
    left: -50%;
    width: 20vmin;
    max-width: 200px;
    aspect-ratio: 1;
    background-image: url("/assets/images/bg-obj-white.png");
    transform: scale(3.5) translateY(-20vh) translateZ(-2px);

    will-change: opacity, transform;
    @include showTime($layer-show-time);
    $layer-show-time: 4s;
    -webkit-transition: opacity $layer-show-time ease, transform $layer-show-time ease;
       -moz-transition: opacity $layer-show-time ease, transform $layer-show-time ease;
            transition: opacity $layer-show-time ease, transform $layer-show-time ease;

    &.showing {
        transform: scale(3.5) translateY(0vh) translateZ(-2px);
    }

}
.parallax-layer-red {
    top: 70%;
    right: 5%;
    width: 15vmax;
    max-width: $max-width * 0.15;
    aspect-ratio: 1;
    background-image: url("/assets/images/bg-obj-red.png");
    transform: scale(1.7) translateY(20vh) translateZ(-0.3px);
    $layer-show-time: 2s;
    will-change: opacity, transform;
    @include showTime($layer-show-time);

    -webkit-transition: opacity $layer-show-time ease, transform $layer-show-time ease;
       -moz-transition: opacity $layer-show-time ease, transform $layer-show-time ease;
            transition: opacity $layer-show-time ease, transform $layer-show-time ease;

    &.showing {
        opacity: 0.9;
        transform: scale(1.7) translateY(0vh) translateZ(-0.3px);
    }

}
.parallax-layer-smile {
    background-size: cover;
    --height: min(80vh, min(80vw, #{$max-width * 0.8}));
    top: 50vh;
    right: 50%;
    height: var(--height);
    margin-top: calc(var(--height) * -0.55);
    margin-right: calc(var(--height) * -0.5);
    aspect-ratio: 1.1311594203;
    background-image: url("/assets/images/bg-obj-smile.png");
    transform: scale(0.8) translateY(10vh) translateZ(0.3px);
    @include breakpoint(medium) {
        //right: 10%;
    }
    $layer-show-time: 2s;
    will-change: opacity, transform;
    @include showTime($layer-show-time);

    -webkit-transition: opacity $layer-show-time ease, transform $layer-show-time ease;
       -moz-transition: opacity $layer-show-time ease, transform $layer-show-time ease;
            transition: opacity $layer-show-time ease, transform $layer-show-time ease;

    &::before {
        position: absolute;
        content: "";
        width: 80%;
        aspect-ratio: 1;
        top: 0%;
        left: 0%;
        background-image: url("/assets/images/bg-obj-caustic.png");
        background-size: cover;
        opacity: 1;

        $layer-show-time: 1s;
        -webkit-transition: opacity $layer-show-time ease;
           -moz-transition: opacity $layer-show-time ease;
                transition: opacity $layer-show-time ease;
    }

    &.showing {
        transform: scale(0.8) translateY(0vh) translateZ(0.3px);
    }

    &.no-caustic {
        &::before {
            opacity: 0;
        }
    }


}
/* ... */

